# noticeft

./: CMakeLists.txt  CMakeSettings.json
include/: alimftp.h  noticeft.h
src/: alimftp.cpp  alimftp_ftp.cpp  alimftp_parselist.cpp  noticeft.cpp  noticeft_ftp.cpp
test/: noticeft_test.cpp
test/resource/: sans.txt
test/xharbour/: notice_test.prg
wrapper/xharbour/: alimftp.prg  noticeft.prg
